--- a/style.css
+++ b/style.css
@@ -1,4 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body{
     font-family: "Roboto", sans-serif;
+    background-color: #1F2937;
+}
+
+li{
+    text-decoration: none;
+    list-style: none;
+    cursor: pointer;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.header{
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+.lefterinos{
+    color: #F9FAF8;
+    font-size: 24px;
+    display: flex;
+    flex-direction: start;
+    gap: 8px;
+    margin-left: 100px;
+    font-weight: bolder;
+}
+
+.righterinos{
+    color: #F9FAF8;
+    font-size: 12px;
+    display: flex;
+    flex-direction: end;
+    gap: 8px;
+    margin-right: 190px;
+}
+
+.hero-main{
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.hero-secondary{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero-button{
+    background-color: #3882F6;
+    color: white;
+    align-items: center;
+    font-size: 16px;
+}
+
+.herocontent{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: 100px;
+}
+
+.heroimage{
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    margin-right: 190px;
+    flex-direction: row;
 }
