--- a/style.css
+++ b/style.css
@@ -32,5 +32,36 @@ body{
 }
 
 .hero-main-content{
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1000px;
+    margin: auto;
+    margin-top: 150px;
+}
+
+heroinfo h1{
+    margin: 10px;
+    font-size: 48px;
+}
+
+heroinfo p{
+    margin: 10px;
+}
+
+.botuncic{
+    cursor: pointer;
+    margin: 10px;
+    outline: 0;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 16px;
+    border-radius: .25rem;
 }
