finished html for signup,still styling signup

--- a/style.css
+++ b/style.css
@@ -124,3 +124,15 @@ heroinfo p{
     font-style: normal;
     text-align: right;
 }
+
+.sign-up-container{
+    height: 40%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.sign-up{
+    
+}
