--- a/style.css
+++ b/style.css
@@ -40,12 +40,12 @@ body{
     margin-top: 150px;
 }
 
-heroinfo h1{
+.heroinfo h1{
     margin: 10px;
     font-size: 48px;
 }
 
-heroinfo p{
+.heroinfo p{
     margin: 10px;
 }
 
@@ -134,5 +134,35 @@ heroinfo p{
 }
 
 .sign-up{
-    
+    background-color: #3882f6;
+    border-radius: 7px;
+    width: 50%;
+    height: 50%;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.sign-up-text p, .sign-up-text h3 {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.sign-up-button button {
+
+    cursor: pointer;
+    outline: 0;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    background-color: #fff;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 1rem;
+    border-radius: .25rem;
+    color: #0d6efd;
+    border-color: #0d6efd;
+
 }
