fixed header positioning and resetet p and m

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
 
 body{
     font-family: "Roboto", sans-serif;
@@ -18,7 +22,7 @@ body{
     align-items: flex-start;
 }
 
-.header-logo .header-links{
+.header-logo, .header-links{
     margin: 10px 30px 5px;
 }
 
